--- a/src/Layouts/HomeLayout.css
+++ b/src/Layouts/HomeLayout.css
@@ -5,20 +5,21 @@
   gap: 0px;
 }
 .left-side-bar {
-  width: 15vw;
+  width: 16.25%;
   background-color: var(--main-theme);
   /* padding: 2em; */
   padding-top: 0;
 }
 .main-working-space {
-  width: 85vw;
+  width: 83.75%;
   background-color: var(--main-theme-gray);
 
   padding-top: 0;
 }
 .logo {
   width: 100%;
-  min-height: 3.5em;
+  height: 8rem;
+  max-height: 8rem;
   background-color: var(--clr-black);
   overflow: hidden;
   display: flex;
@@ -26,12 +27,12 @@
   justify-content: center;
 }
 .logo img {
-  max-width: 50%;
-  max-height: 40%;
+  max-width: 80%;
+  max-height: 60%;
 }
 .Link {
   width: 100%;
-  max-height: 1.5em;
+  max-height: 6rem;
   color: var(--clr-white);
   display: flex;
   align-items: center;
@@ -43,31 +44,35 @@
 .Link a {
   text-decoration: none;
   color: var(--clr-white);
-  font-size: small;
-  font-weight: 200;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 1.4rem;
 }
 .Link img {
-  max-width: 1.1em;
+  width: 18.854px;
+  height: 18.854px;
+  flex-shrink: 0;
 }
 .links {
-  padding-top: 2em;
+  padding-top: 4.2rem;
 }
+
 .header {
-  width: 100%;
-  height: 3.5em;
-  min-height: 3.5em;
-  background-color: var(--clr-white);
-  box-shadow: 0 0 2px 0 var(--darker-gray);
-  padding-left: 0.8em;
-  padding-right: 0.8em;
-  padding-bottom: 0.3em;
-  padding-top: 0.3em;
-  overflow: hidden;
+  padding: 1.6rem 2.4rem;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: 8rem;
+  background-color: var(--clr-white);
+  box-shadow: 0 0 2px 0 var(--darker-gray);
 }
+
 .user-card {
-  width: 16%;
+  width: 18.7rem;
+  max-width: 187px;
+  height: 4.9rem;
   /* max-width: ;
   max-height: 5em; */
   padding: 0.5em;
@@ -79,15 +84,17 @@
   justify-content: space-between;
   overflow: hidden;
 }
-.user-card .text {
+/* .user-card .text {
   width: 60%;
   font-size: small;
 }
+  */
 .user-card .image {
-  width: 20%;
-  height: 100%;
+  width: 3.2rem;
+  height: 3.2rem;
+  padding: 0.8rem;
   border-radius: 50%;
-  background-color: var(--darker-gray);
+  background-color: var(--clr-green);
 }
 .working-box {
   padding: 2em;
