--- a/src/Layouts/HomeLayout.css
+++ b/src/Layouts/HomeLayout.css
@@ -37,7 +37,7 @@
   display: flex;
   align-items: center;
   gap: 0.4em;
-  padding: 1.2em;
+  padding: 1.2rem 2rem;
   /* background-color: aqua; */
   overflow: hidden;
 }
