--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -1,18 +1,85 @@
 .main-container-box {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+  background: radial-gradient(
+    circle at 226% 50%,
+    var(--light-green-gradient),
+    var(--dark-green)
+  );
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0 auto;
-  font-size: xx-large;
-  color: var(--clr-green);
-  margin-top: 100px;
-  background-image: linear-gradient(
-    to-right,
-    var(--main-theme) 60%,
-    var(--light-green-gradient)
-  );
+  justify-items: center;
+  overflow: hidden;
 }
 .green-side {
+  width: 66%;
+  height: 100%;
+  overflow: hidden;
+  color: var(--clr-white);
+}
+.form {
+  width: 34%;
+  height: 100%;
+  background-color: var(--clr-white);
+}
+.blurred-box {
+  width: 91%;
+  height: 64%;
+  position: relative;
+  top: 40%;
+}
+.blurred-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.man-box {
+  width: 80%;
+  height: 70%;
+  z-index: 3;
+  position: relative;
+  top: -43.8%;
+}
+.man-box img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: fill; */
+}
+.text-on-green {
+  width: 80%;
+  height: 10%;
+  text-align: left;
+  padding: 5.5rem 3rem;
+  display: relative;
+
+  /* padding: 6rem 1rem 1rem 1rem; */
+}
+.text-on-green h1 {
+  font-family: "Poppins", sans-serif;
+  font-size: 7.9rem;
+  font-weight: 150;
+  font-style: normal;
+  padding: 0px;
+  margin-bottom: 0%;
+  padding-bottom: 0px;
+  margin: 0px;
+  white-space: pre-wrap;
+}
+.to-text {
+  font-family: "Sacramento", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+.throttle-text {
+  font-weight: 350;
+}
+.text-on-green h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 3.9rem;
+  font-weight: 250;
+  font-style: normal;
+  padding: 0px;
+  margin: 0px;
+  display: relative;
+  top: -27rem;
 }
