--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@ html {
 
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   font-family: "Poppins", sans-serif;
 }
 
