--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -3,7 +3,7 @@
   width: 100vw;
   height: 100vh;
   background: radial-gradient(
-    circle at 195% 50%,
+    circle at 150% 50%,
     var(--light-green-gradient),
     var(--dark-green)
   );
@@ -84,7 +84,7 @@
 }
 .text-on-green h1 {
   font-family: "Poppins", sans-serif;
-  font-size: 6.6rem;
+  font-size: clamp(20px,6.6rem, 70px ); 
   font-weight: 150;
   font-style: normal;
   margin-bottom: 0%;
@@ -131,7 +131,7 @@
 .white-container {
   width: 100%;
   height: 100%;
-  padding: 35% 13% 30% 13%;
+  padding: 30% 13% 30% 15%;
 }
 .input-fields input {
   display: block;
@@ -168,7 +168,9 @@
 }
 .input-box {
   max-width: 47rem;
+  max-width: 46.8rem;
   max-height: 5.1rem;
+  min-height: 5rem;
   display: flex;
   gap: 1.3rem;
   padding: 1.1rem 2.4rem;
@@ -205,4 +207,64 @@
 }
 .input-fields {
   margin-bottom: 6.6rem;
+}
+.sign-up span{
+  margin-top: 3px;
+  font-size: 1.4rem
+}
+.sign-up span a{
+  text-decoration: none;
+  color: var(--dark-green);
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+
+//MEDIA QUERY
+@media screen and (max-width: 976px) {
+  .text-on-green {
+    width: 80%;
+    height: auto;
+    min-width: 100px;
+    min-height: 60px;
+    text-align: left;
+    padding: 3rem 2rem;
+    margin-top: 2px;
+    position: relative;
+    line-height: 1.2;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+  }
+
+  .text-on-green h1 {
+    font-size: 1.1rem !important;
+    font-weight: 500 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    line-height: 1.2 !important;
+  }
+
+  .text-on-green h3 {
+    font-size: 0.2rem !important;
+    font-weight: 400 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: relative !important;
+    top: 0 !important;
+    line-height: 1.2 !important;
+  }
+
+  .text-on-green pre {
+    display: none !important;
+  }
+
+  .to-text {
+    font-family: "Sacramento", cursive;
+    font-weight: 400;
+  }
+
+  .throttle-text {
+    font-weight: 400;
+  }
 }
