--- a/src/Layouts/HomeLayout.css
+++ b/src/Layouts/HomeLayout.css
@@ -30,32 +30,25 @@
   max-width: 80%;
   max-height: 60%;
 }
-.Link {
+.links {
+  padding-top: 2.5rem;
+}
+
+/* LOGOUT BUTTON */
+.logout-botton {
   width: 100%;
   max-height: 6rem;
   color: var(--clr-white);
   display: flex;
   align-items: center;
   gap: 0.4em;
-  padding: 1.2rem 2rem;
+  padding: 1.6rem 1.6rem;
   /* background-color: aqua; */
   overflow: hidden;
-}
-.Link a {
-  text-decoration: none;
-  color: var(--clr-white);
-  font-size: 1.6rem;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 1.4rem;
-}
-.Link img {
-  width: 18.854px;
-  height: 18.854px;
-  flex-shrink: 0;
-}
-.links {
-  padding-top: 4.2rem;
+  border-top: 0.2rem solid var(--clr-white);
+  border-bottom: 0.2rem solid var(--clr-white);
+  margin-top: 9.3rem;
+  cursor:pointer;
 }
 
 .header {
