--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -201,7 +201,12 @@
   border-radius: 1.4rem;
   font-size: 1.7rem;
   color: var(--clr-white);
+  cursor: pointer;
 }
+/* .button-and-sign-up button:hover{
+  background-color: var(--light-green-gradient);
+  color: black;
+} */
 .logo-form {
   margin-bottom: 3.6rem;
 }
