--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -51,25 +51,74 @@
 
   
 
-  .subheader {
+  /* .subheader {
     display: grid;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 2rem;
-    border-bottom: 0.25rem solid #ddd;
-   
-    
-    
-  }
+  } */
+
 .overview{
     color: var(--clr-black);
     font-size: 2rem;
     margin-left: 1rem;
     font-weight: bold;
 }
+.overview_container{
+  display: flex;
+  justify-content: space-between;
+}
 .overviewtext{
     font-size: 0.5rem;
     margin-left: 0.9rem;
     margin-bottom: 1rem;
+    border-bottom: 0.25rem solid #ddd;
 }
+.export_button{
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #ccc;
+  width: 9rem;
+  height: 3rem;
+  max-width: 100%;
+  margin-right: 2rem;
+}
+
+.filter_button{
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #ccc;
+  width: 9rem;
+  height: 3rem;
+  max-width: 100%;
+  margin-right: 2rem;
+}
+
+.addorder_button{
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #ccc;
+  width: 15rem;
+  height: 4rem;
+  max-width: 100%;
+  background-color:var(--main-theme);
+}
+.button_container{
+  color: var(--colorash);
+}
+
+
+.date__control input {
+  font: inherit;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  border: 0.1rem solid #ccc;
+  width: 12rem;
+  max-width: 100%;
+  float: right;
+}
+
