set up the vendor and rider register pages

--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -69,5 +69,5 @@
   background-color: var(--clr-white);
   border-radius: 4px;
   box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2);
-  margin: 3rem auto;
+  margin: 0 auto;
 }
