--- a/src/Modals/ModalComponents/SignupCard.css
+++ b/src/Modals/ModalComponents/SignupCard.css
@@ -13,7 +13,7 @@
 }
 .modal-background .register-modal-card {
   width: 46rem;
-  /* max-width: 36rem; */
+  max-width: 48rem;
   height: 26rem;
   border-radius: 15px;
   background-color: white;
