--- a/src/Components/Stepper.css
+++ b/src/Components/Stepper.css
@@ -89,7 +89,7 @@
 .form-group input {
   padding: 0.75rem 1rem;
   border: 1px solid #065f46;
-  background-color: #d1fae5;
+  background-color: #CCE1DB;
   border-radius: 0.75rem;
   font-size: 1rem;
 }
@@ -122,4 +122,15 @@
   background-color: white;
   color: #065f46;
   border: 2px solid #065f46;
+}
+
+.radio-group {
+  display: flex;
+  gap: 1.5rem; /* Space between buttons */
+  margin-top: 0.4rem;
+}
+.radio-inline{
+  border: 0.1rem solid #065f46;
+  padding: 0.5rem;
+  border-radius: 0.75rem;
 }
