--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -22,7 +22,7 @@
 }
 .white-right {
   width: 75%;
-  height: 100%;
+  height: 100vh;
   background-color: var(--clr-white);
 }
 .register-text-left {
