--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -2,7 +2,6 @@
   width: 90%;
   max-width: 60rem;
   margin: 2rem auto;
-  font-family: "Arial", sans-serif;
 }
 
 .form-title {
@@ -31,8 +30,18 @@
   top: 1rem;
   right: -50%;
   width: 100%;
-  height: 0.125rem;
-  background-color: #cbd5e0;
+  height: 10px;
+  background-color: var(--clr-green);
+  z-index: -1;
+} 
+.step-item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 18px;
+  left: 50%;
+  width: 100%;
+  height: 2px;
+  background-color: #cce7e1;
   z-index: -1;
 }
 
@@ -69,6 +78,8 @@
   font-size: 0.875rem;
 }
 
+
+/* FORM STYLING */
 .form-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
@@ -135,13 +146,16 @@
 
 .btn-filled,
 .btn-outline {
-  padding: 0.75rem 2rem;
-  border-radius: 0.75rem;
-  font-size: 1rem;
+  width: 33rem;
+  height: 128px;
+  padding: 0.84rem 2rem;
+  border-radius: 0.95rem;
+  font-size: 1.9rem;
   font-weight: 500;
   cursor: pointer;
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
 }
 
