--- a/src/Modals/ModalComponents/SignupCard.css
+++ b/src/Modals/ModalComponents/SignupCard.css
@@ -10,6 +10,7 @@
   justify-content: center;
   margin-top: 0 auto;
   z-index: 100;
+  
 }
 .modal-background .register-modal-card {
   width: 46rem;
@@ -40,6 +41,36 @@
   align-items: center;
   gap: 0.9rem;
   padding: 1.3rem;
+  transition: background-color 0.2s ease;
+}
+.register-modal-button:hover{
+ cursor: pointer;
+ /* filter: invert(0.8); */
+}
+.register-modal-button {
+  margin-top: 0px;
+  width: 100%;
+  border: 1.9px solid var(--main-theme);
+  height: 6rem;
+  margin-bottom: 9px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 0.9rem;
+  padding: 1.3rem;
+  transition: background-color 0.2s ease;
+}
+.register-modal-button :hover{
+  margin-top: 0px;
+  width: 100%;
+  border: 1.9px solid var(--main-theme);
+  height: 6rem;
+  margin-bottom: 9px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  gap: 0.9rem;
+  padding: 0.6rem;
   transition: background-color 0.2s ease;
 }
 .register-modal-button p {
