--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -61,6 +61,7 @@
   margin: 0;
 }
 .man-box img {
+  display: none;
   width: 100%;
   height: 100%;
   object-fit: fill;
@@ -363,9 +364,9 @@
 }
 .sign-up span a:hover {
   text-decoration: none;
-  color: var(--input-background);
   font-weight: 500;
-  text-decoration: underline;
+  color: var(--clr-green);
+  text-decoration:underline;
   cursor: pointer;
   text-decoration: none;
 }
