--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -126,10 +126,16 @@
 
 .form-group input {
   padding: 0.75rem 1rem;
-  border: 1px solid #065f46;
-  background-color: #cce1db;
+  width: 100%;
+  height: 4rem; 
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
   border-radius: 0.75rem;
   font-size: 1rem;
+}
+.form-group input::placeholder {
+  color: var(--main-theme);
 }
 .form-group_vehicle input {
   padding: 0.75rem 1rem;
@@ -161,7 +167,7 @@
   justify-content: center;
   gap: 0.5rem;
   position: relative;
-  bottom: -15.3rem;
+  /* bottom: -15.3rem; */
 }
 .btn{
   width: 1.5rem;
@@ -186,7 +192,8 @@ input[type="email"],
 input[type="tel"] {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid var(--main-theme);
+  color: var(--clr-black);
   border-radius: 4px;
   margin-top: 5px;
 }
