--- a/src/Components/ImageUploader.module.css
+++ b/src/Components/ImageUploader.module.css
@@ -4,6 +4,9 @@
   text-align: center;
   font-family: Arial, sans-serif;
 }
+.upload-container p{
+    text-align: right;
+}
 
 .drop-box {
   border: 2px dashed #aaa;
