--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -18,7 +18,7 @@
   margin-bottom: 3rem;
   position: relative;
 }
-.stepper p{
+.stepper p {
   color: var(--clr-black);
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
@@ -73,7 +73,6 @@
   width: 90%;
   height: 2px;
   background: var(--dark-green);
-  
 }
 
 .step-label {
@@ -95,10 +94,7 @@
   display: flex;
   flex-direction: column;
 }
-.form-group_vehicle {
-  display: flex;
-  flex-direction: column;
-}
+
 
 .form__grid {
   display: grid;
@@ -116,26 +112,26 @@
   align-items: center;
 }
 .form-group label {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-}
-.form-group_vehicle label {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  margin-top: 0.9rem;
 }
 
 .form-group input {
   padding: 0.75rem 1rem;
   width: 100%;
-  height: 4rem; 
+  height: 4rem;
   color: var(--clr-black);
   border: 1px solid var(--main-theme);
   background-color: var(--input-background);
-  border-radius: 0.75rem;
+  border-radius: 1.1rem;
   font-size: 1rem;
 }
 .form-group input::placeholder {
   color: var(--main-theme);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.3rem;
+  font-weight: 400;
 }
 .form-group_vehicle input {
   padding: 0.75rem 1rem;
@@ -166,10 +162,11 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  margin-top: 3.5rem;
   position: relative;
   /* bottom: -15.3rem; */
 }
-.btn{
+.btn {
   width: 1.5rem;
   height: 1.2rem;
 }
@@ -177,14 +174,14 @@
 .btn-filled {
   background-color: var(--dark-green);
   color: white;
-  width:100%;
+  width: 70%;
   border: none;
 }
 
 .btn-outline {
   background-color: white;
   color: var(--dark-green);
-  width: 100%;
+  width: 70%;
   border: 2px solid var(--dark-green);
 }
 
@@ -202,4 +199,144 @@ input[type="tel"] {
   .form-grid {
     grid-template-columns: 1fr;
   }
+}
+
+/* IMAGE UPLOADER */
+.upload-container {
+  width:100%;
+  height: 100%;
+  margin: 1rem auto;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.upload-container p{
+  text-align: left;
+  align-self: first baseline;
+  color: var(--clr-black);
+  font-size: 1.6em;
+  font-weight: 300;
+  margin-left: 8%;
+}
+
+.drop-box {
+  border: 1px solid var(--main-theme);
+  border-radius: 20px;
+  width: 50rem;
+  height: 18rem;
+  background-color: var(--clr-white);
+  cursor: pointer;
+  transition: background 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.drop-box:hover {
+  background-color: #f0f0f0;
+}
+
+.preview-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+
+.upload-button {
+  margin-top: 1.4rem;
+  margin-bottom: 3rem;
+  width: 50rem;
+  height: 5.8rem;
+  border: 1px solid var(--main-theme);
+  padding: 10px 20px;
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--clr-white);
+  color: var(--main-theme);
+  border-radius: 15px;
+  transition: background 0.3s ease;
+}
+
+/* PASSWORD STYLING */
+.Account-details-password{
+  padding: 1rem 1.3rem;
+  width: 120%;
+  height: 4.4rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 1.2rem;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  gap: 4px;
+}
+.email{
+  padding: 1rem 1.3rem;
+  width: 120%;
+  height: 4.4rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 1.5rem;
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  gap: 4px;
+  position: relative;
+}
+.email img{
+  /* max-width: 20px;
+  max-width: auto; */
+  position: absolute;
+  left: 1rem;
+}
+.Account-details-password img{
+  max-width: 18px;
+  max-height: auto;
+  margin-left: 4px;
+}
+.Account-details-password input{
+  border: none;
+  padding: 0.3rem;
+  background-color: transparent;
+
+}
+.Account-details-password input::placeholder{
+  color: var(--main-theme);
+}
+.Account-details-password input:focus{
+  border: none;
+  outline: none;
+}
+.Account-details-password button{
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+/* .form-group input {
+  padding: 0.75rem 1rem;
+  width: 100%;
+  height: 4rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 0.75rem;
+  font-size: 1rem;
+} */
+
+
+.upload-button:hover {
+  background-color: #f0f0f0;
 }
