--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -337,14 +337,15 @@
   cursor: pointer;
 }
 .button-and-sign-up button:hover{
-  background-color: var(--background-clr);
+  /* background-color: rgba(23,101, 79, 0.8); */
+  background-color: var(--dark-green);
   height: 6rem;
   font-size: 2rem;
-  color: var(--dark-green);
+  color: var(--clr-white);
   border: none;
   /* color: var(--background-clr); */
-  border: solid 2px var(--dark-green);
-  box-shadow: 2px 1px 5px var(--darker-gray);
+  /* border: solid 1px var(--clr-white); */
+  box-shadow: 2px 1px 5px var(--main-theme);
   
 }
 .button-and-sign-up button:active{
