--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -125,7 +125,7 @@
   border: 1px solid var(--main-theme);
   background-color: var(--input-background);
   border-radius: 1.1rem;
-  font-size: 1rem;
+  font-size: 1.4rem;
 }
 .form-group input::placeholder {
   color: var(--main-theme);
@@ -138,7 +138,7 @@
   border: 1px solid #065f46;
   background-color: #cce1db;
   border-radius: 0.75rem;
-  font-size: 1rem;
+  font-size: 1.4rem;
   width: 35rem;
 }
 
@@ -309,6 +309,7 @@ input[type="tel"] {
   border: none;
   padding: 0.3rem;
   background-color: transparent;
+  font-size: 1.4rem
 
 }
 .Account-details-password input::placeholder{
